Dodan sitemap, google verifikacija, postavljeno na host

--- a/cijenik.html
+++ b/cijenik.html
@@ -19,20 +19,20 @@
   <meta property="og:title" content="B&R Interijeri">
   <meta property="og:description" content="Suha gradnja">
   <meta property="og:type" content="website">
-  <!-- <meta property="og:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg">
-  <meta property="og:url" content="https://milaloncar-umjetnica.hr"> -->
+  <meta property="og:image" content="https://brinterijeri.com/assets/img/hrca.jpg">
+  <meta property="og:url" content="https://brinterijeri.com">
   <meta property="og:site_name" content="B&R Interijeri">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="B&R Interijeri - Suha gradnja">
   <meta name="twitter:description" content="Suha gradnja, pregradni zidovi">
-  <!-- <meta name="twitter:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg"> -->
+  <meta name="twitter:image" content="https://brinterijeri.com/assets/img/hrca.jpg">
 
   <!-- Favicon -->
-  <!-- <link rel="icon" type="image/x-icon" href="/favicon-mila5.ico">
-  <link rel="icon" type="image/png" href="/assets/images/android-chrome-192x192.png">
-  <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png"> -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="/assets/img/android-chrome-192x192.png">
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
 
   <!--===== CSS =====-->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -228,7 +228,7 @@
             <div class="footer__tel">
                 <p>tel: +38595998270154</p>
             </div>
-            <p class="footer__copy">&#169; by Xiphoideuss. All rights reserved</p>
+            <p class="footer__copy">&#169; B&R Interijeri. All rights reserved</p>
         </footer>
 
         <!-- ===== SCROLL TOP BUTTON ===== -->
