--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>B&R Interijeri</title>
 
   <!-- Google Search Console verifikacija -->
-  <meta name="google-site-verification" content="" />
+  <meta name="google-site-verification" content="EvyUNpKv1FktaHRReUAnYXsLb2gyUgMFwic6IUvrgvA" />
 
   <!-- Osnovni SEO meta tagovi -->
   <meta name="description" content="br interijeri - Suha gradnja">
@@ -19,15 +19,15 @@
   <meta property="og:title" content="B&R Interijeri">
   <meta property="og:description" content="Suha gradnja">
   <meta property="og:type" content="website">
-  <!-- <meta property="og:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg">
-  <meta property="og:url" content="https://milaloncar-umjetnica.hr"> -->
+  <meta property="og:image" content="https://brinterijeri.com/assets/img/hrca.jpg">
+  <meta property="og:url" content="https://brinterijeri.com">
   <meta property="og:site_name" content="B&R Interijeri">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="B&R Interijeri - Suha gradnja">
   <meta name="twitter:description" content="Suha gradnja, pregradni zidovi">
-  <!-- <meta name="twitter:image" content="https://milaloncar-umjetnica.hr/assets/images/naslovne/naslovna.jpg"> -->
+  <meta name="twitter:image" content="https://brinterijeri.com/assets/img/hrca.jpg">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -180,7 +180,7 @@
       <div class="footer__tel">
         <p>tel: +38595998270154</p>
       </div>
-      <p class="footer__copy">&#169; by Xiphoideuss. All rights reserved</p>
+      <p class="footer__copy">&#169; B&R Interijeri. All rights reserved</p>
     </footer>
 
     <!-- ===== SCROLL TOP BUTTON ===== -->
